# playground

./: .gitignore  README.md  sync.py  sync.sh
fastapi-custom-middleware/: README.md  logging.yml  pyproject.toml
fastapi-custom-middleware/fastapi_custom_middleware/: app.py  middleware.py
fastapi-custom-middleware/tests/: test_app.py
python-custom-diff-tool/: README.md  compare_sites_content.py  my_diff.py  ovh.html  sm.html
python/celery-task-unexpected-argument/: main.py  pyproject.toml
python/cli-click/: README.md  cat.py  hello.py  ls.py  person.py  rectangle.py  tail.py
python/concurrency-in-async-await-and-threading/: 1_synchronous.py  2_asynchronous.py  3_async_with_workers.py  4_async_with_workers_and_user_input.py  5_threading.py  6_thread_with_workers_and_user_input.py  7_cpu_vs_io_bound_tasks.py  README.md  synchronous.py  utils.py
python/fastapi-custom-middleware/: README.md  pyproject.toml
python/fastapi-custom-middleware/fastapi_custom_middleware/: app.py
python/git-python-tutorial/: pyproject.toml
python/pca-principal-component-analysis/: main.py  requirements.txt
python/playwright-hello-world/: playwright_hello_world.py
security/: OSCP.md  portswigger-auth-brute-2FA-code.py
