[tool.poetry]
name = "fastapi-custom-middleware"
version = "0.1.0"
description = ""
authors = ["lmieczkowski <lmieczkowski@grupazpr.pl>"]
readme = "README.md"
packages = [{include = "fastapi_custom_middleware"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
pytest = "^7.4.3"
uvicorn = "^0.23.2"
httpx = "^0.25.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
