[tool.poetry]
name = "fastapi-custom-middleware"
version = "0.1.0"
description = ""
authors = ["lmieczkowski <lmieczkowski@grupazpr.pl>"]
readme = "README.md"
packages = [{include = "fastapi_custom_middleware"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
