[tool.poetry]
name = "git-python-tutorial"
version = "0.1.0"
description = ""
authors = ["lmieczkowski <lmieczkowski@grupazpr.pl>"]
readme = "README.md"
packages = [{include = "git_python_tutorial"}]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
